2007-12-05  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-list-view.c:
	* src/Makefile.am: Ship empathy-call.chandler as extra_dist if not
	compiled with VoIP support. Fixes bug #501486.

2007-12-03  Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump version to 0.21.4.

2007-12-03  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-chat-window.c:
	* libempathy-gtk/empathy-chat.c:
	* libempathy-gtk/empathy-chat.h:
	* libempathy-gtk/empathy-group-chat.c:
	* libempathy-gtk/empathy-group-chat.h:
	* libempathy-gtk/empathy-private-chat.c:
	* libempathy-gtk/empathy-private-chat.h:
	* libempathy/empathy-tp-chat.c:
	* libempathy/empathy-tp-chat.h:
	* python/pyempathy/pyempathy.defs:
	* python/pyempathygtk/pyempathygtk.defs:
	* src/empathy-chat-chandler.c: Cleanup chat objects API and request a
	new Text channel if account gets reconnected.

2007-12-03  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-debug.c: Call tp_debug_set_flags to get tp-glib
	debug output.

2007-12-02  Xavier Claessens  <xclaesse@gmail.com>

	 * configure.ac:
	 * libempathy-gtk/empathy-account-chooser.c:
	 * libempathy-gtk/empathy-accounts-dialog.c:
	 * libempathy-gtk/empathy-chat.c:
	 * libempathy-gtk/empathy-contact-dialogs.c:
	 * libempathy-gtk/empathy-group-chat.c:
	 * libempathy-gtk/empathy-main-window.c:
	 * libempathy-gtk/empathy-presence-chooser.c:
	 * libempathy-gtk/empathy-status-presets.c:
	 * libempathy/empathy-avatar.c:
	 * libempathy/empathy-contact-factory.c:
	 * libempathy/empathy-contact-manager.c:
	 * libempathy/empathy-tp-call.c:
	 * libempathy/empathy-tp-chat.c:
	 * libempathy/empathy-tp-chat.h:
	 * libempathy/empathy-tp-contact-list.c:
	 * libempathy/empathy-tp-group.c:
	 * libempathy/empathy-tp-roomlist.c:
	 * libempathy/empathy-utils.c:
	 * libempathy/empathy-utils.h:
	 * python/pyempathy/pyempathy.defs:
	 * src/empathy.c: Do not use deprecated symbols from libtelepathy. We