@@ -1,3 +1,14 @@
+2007-12-06  Xavier Claessens  <xclaesse@gmail.com>
+
+	* data/empathy.schemas.in:
+	* libempathy-gtk/empathy-preferences.c:
+	* libempathy-gtk/empathy-preferences.glade:
+	* libempathy-gtk/empathy-preferences.h:
+	* libempathy-gtk/empathy-status-icon.c:
+	* libempathy/empathy-idle.c:
+	* libempathy/empathy-idle.h: Add a preference option to disable/enable
+	NM support.
+
 2007-12-05  Xavier Claessens  <xclaesse@gmail.com>
 
 	* libempathy-gtk/empathy-contact-list-view.c:
